# XBOX-Godot-Sample

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  spike-report.md
.github/: copilot-instructions.md  gdk-versions.json  godot-versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/instructions/: godot-gameinput.instructions.md  godot-gdk-editortools.instructions.md  godot-gdk-packaging.instructions.md  godot-gdk.instructions.md  godot-playfab.instructions.md
cmake/: GDKDependencies.cmake  GodotExtensionCommon.cmake
docs/: README.md  addon-getting-started.md  async-patterns.md  getting-started.md  godot-gameinput.md  godot-gdk-api-reference.md  godot-gdk-async-system.md  godot-gdk-build-and-loading.md  godot-gdk-editor-tools.md  godot-gdk-native-runtime.md  godot-gdk-plugin.md  godot-gdk-sample-and-tests.md  godot-playfab-plugin.md  troubleshooting.md
sample/: gdk_bootstrap.gd  main.gd  main.tscn
spec/: dedicated-godot-test-hosts.md  gdext-csharp.md  gdext-editortools.md  gdext-gameinput.md  gdext-gdk.md  gdext-packaging.md  gdext-playfab-lobby-matchmaking.md  gdext-playfab-party.md  gdext-playfab.md  testing-strategy.md
tests/cpp/fuzz_harness/: CMakeLists.txt  godot_stub_init.cpp  godot_stub_init.h  stub_dict_array.cpp  stub_memory.cpp  stub_noop.cpp  stub_object.cpp  stub_packed_array.cpp  stub_string.cpp  stub_types.h  stub_variant.cpp
tools/: build_addons.ps1  check_gd_scripts_headless.ps1  configure_playfab_test_title.ps1  export_samples.ps1  package_addons.ps1  run_all_tests.ps1  run_fuzz_replay.ps1  setup_sample.ps1
(+517 files in other folders)
